<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    tools:context=".ui.GameFragment">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_game_header_vertical_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/fragment_game_header"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/fragment_game_instructions"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/instructions_border_bottom"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="@dimen/fragment_game_header_vertical_padding"
        android:src="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/tv_instructions"
        app:tint="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/ll_statistics_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions_border_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_game_statistics_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_game_statistics"
            android:textSize="14sp" />
    </LinearLayout>

    <include layout="@layout/reusable_game_summary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/btn_rock"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/fragment_game_bottom_button_spacing"
        android:layout_marginEnd="@dimen/fragment_game_bottom_button_spacing"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/colorPrimary"
        android:src="@drawable/rock"
        app:layout_constraintEnd_toStartOf="@+id/btn_paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_paper"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_game_bottom_button_height"
        android:layout_marginStart="@dimen/fragment_game_bottom_button_spacing"
        android:layout_marginEnd="@dimen/fragment_game_bottom_button_spacing"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/colorPrimary"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toStartOf="@+id/btn_scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_rock" />

    <ImageView
        android:id="@+id/btn_scissors"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/fragment_game_bottom_button_spacing"
        android:layout_marginEnd="@dimen/fragment_game_bottom_button_spacing"
        app:layout_constraintHorizontal_weight="1"
        android:background="@color/colorPrimary"
        android:src="@drawable/scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_paper"/>

</androidx.constraintlayout.widget.ConstraintLayout>